# wf_firmware_uploader

./: .gitignore  .wf_firmware_uploader_config.json  CLAUDE.md  build_all.bat  create_icon.py  pyproject.toml  run.bat  setup_dev_tools.sh  test_stylesheets.py  wf_firmware_uploader.spec
.claude/: settings.local.json
PSA1.0 펌웨어/: WithForce_1.00.07 (1).hex  WithForce_1.00.08.hex  WithForce_1.00.09.hex  WithForce_1.00.10.hex  WithForce_1.00.11.hex  WithForce_1.00.12.hex  WithForce_1.00.13.hex  WithForce_1.00.14.hex  WithForce_1.00.18.hex  WithForce_1.00.21.hex  WithForce_1.00.22.hex  WithForce_1.00.23.hex  WithForce_1.00.24.hex  WithForce_1.00.25.hex  WithForce_1.00.25_TEST.hex  WithForce_1.00.25_TEST2.hex  WithForce_1.00.26.hex  WithForce_1.00.27.hex  WithForce_1.00.28.hex  WithForce_1.00.29_10s.hex
firmwares/stm32/: WithForce_1.00.07 (1).hex  WithForce_1.00.29_10s.hex  WithForce_1.00.30.hex
installer/: BUILD_INSTRUCTIONS.md  build_msi.bat  create_installer.py  installer.iss
src/: main.py
src/core/: esp32_uploader.py  path_utils.py  serial_boot_controller.py  serial_utils.py  settings.py  stm32_uploader.py
src/ui/: components.py  main_window.py
src/ui/styles/: __init__.py  themes.py
src/ui/tabs/: __init__.py  dashboard_tab.py  esp32_tab.py  stm32_tab.py
src/ui/widgets/: __init__.py  counter_widget.py
src/ui/workers/: __init__.py  upload_worker.py
